# ImageFormats

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  JPEG.sac  PGM.sac  PNG.sac  PPM.sac
src/src/JPEG/: jpeg.c
src/src/PNG/: array2png.c  imagesac.h  imshow.c  png2array.c
